--- a/nutritechAPI/.travis.yml
+++ b/nutritechAPI/.travis.yml
@@ -4,3 +4,9 @@ script:
  - mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
 jdk:
  - oraclejdk8
+ deploy:
+  provider: script
+  script: "cp .travis.settings.xml $HOME/.m2/settings.xml && mvn deploy"
+  skip_cleanup: true
+  on:
+    tags: true
