--- a/nutritechAPI/.travis.yml
+++ b/nutritechAPI/.travis.yml
@@ -3,10 +3,17 @@ script:
  - mvn test
  - mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
 jdk:
- - oraclejdk8
- deploy:
-  provider: script
-  script: "cp .travis.settings.xml $HOME/.m2/settings.xml && mvn deploy"
-  skip_cleanup: true
-  on:
+ - oraclejdk11
+ services:
+- docker
+cache:
+directories:
+    - "$HOME/.cache"
+deploy:
+    provider: script
+    script: "cp .travis.settings.xml $HOME/.m2/settings.xml && mvn deploy"
+    skip_cleanup: true
+    on:
     tags: true
+before_install:
+script: mvn test -f ./nutritechAPI/pom.xml
