--- a/nutritechAPI/.travis.yml
+++ b/nutritechAPI/.travis.yml
@@ -1,17 +1,19 @@
 language: java
 script:
- - mvn test -f ./nutritechAPI/pom.xml
- - mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
+  - mvn test
+  - mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
 jdk:
- - oraclejdk11
- services:
-- docker
+  - oraclejdk11
+services:
+  - docker
 cache:
 directories:
-    - "$HOME/.cache"
+  - "$HOME/.cache"
 deploy:
     provider: script
     script: "cp .travis.settings.xml $HOME/.m2/settings.xml && mvn deploy"
     skip_cleanup: true
     on:
     tags: true
+before_install:
+    script: mvn test -f ./pom.xml
