--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: java
 script:
   - mvn test -f ./nutritechAPI/pom.xml
+  - cd ./nutritechAPI
   - mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
 jdk:
   - oraclejdk11
